WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289116
[text-wrap-style:pretty] orphan avoidance heuristic fails in some edge cases.
https://bugs.webkit.org/show_bug.cgi?id=289116
Summary
[text-wrap-style:pretty] orphan avoidance heuristic fails in some edge cases.
Yulun Wu
Reported
2025-03-04 14:06:31 PST
rdar://146142653
Attachments
Add attachment
proposed patch, testcase, etc.
Yulun Wu
Comment 1
2025-03-04 14:21:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41878
EWS
Comment 2
2025-03-06 18:56:09 PST
Committed
291750@main
(29076a47162d): <
https://commits.webkit.org/291750@main
> Reviewed commits have been landed. Closing PR #41878 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug