[text-wrap-style:pretty] Fix edge case where orphan avoidance heuristics conflict. https://bugs.webkit.org/show_bug.cgi?id=289116 <rdar://146142653>

Reviewed by Alan Baradlay.

Text-wrap-style:pretty does not correctly prevent orphans in some edge cases.
This is caused by the usage of two separate orphan minimization heuristics
which may interact in undexpected ways.

This PR combines them and simplifies this heuristic to avoid unexpected
edge cases. This PR also fixes an orphan minimization off-by-one error.

Canonical link: https://commits.webkit.org/291750@main